# requirements-detector

./: .coveragerc  .gitignore  .landscape.yaml  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yaml
dependency_detector.egg-info/: PKG-INFO  SOURCES.txt
requirements_detector/: __compat__.py  __init__.py  __main__.py  detect.py  exceptions.py  formatters.py  handle_setup.py  requirement.py  run.py
requirements_detector.egg-info/: PKG-INFO  SOURCES.txt
requirements_detector/poetry_semver/: README.md  __init__.py  patterns.py  version.py  version_constraint.py  version_range.py  version_union.py
tests/: test.py  test_detection.py  test_failure_cases.py  test_parsing.py
tests/detection/syntax_error/: regular_indentation.py  setup.py  setup_multiline_string.py
tests/detection/test1/: requirements.txt
tests/detection/test2/requirements/: webui.pip
tests/detection/test3/: reqs.txt  requirements_test.txt
tests/detection/test4/: callable.py  in_file.py  simple.py  subscript_assign.py  tuple.py  uses_requires.py  uses_requires_and_install_requires.py  utf8.py
tests/detection/test5/: invalid_requirements.txt
tests/detection/test6/: requirements.txt
tests/detection/test7/: setup.py
tests/detection/test8/: pyproject.toml
tests/test_poetry_semver/: test_main.py  test_version.py  test_version_range.py
