[tool.poetry]
name = "requirements-detector"
version = "1.0.0dev0"
authors = ["Landscape.io <code@landscape.io>"]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Operating System :: Unix',
    'Topic :: Software Development :: Quality Assurance',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'License :: OSI Approved :: MIT License',
]
license = "MIT"
keywords = ["python","requirements detector"]
description = "Python tool to find and list requirements of a Python project"
readme = "README.md"
homepage = "https://github.com/landscapeio/requirements-detector"
packages = [
  { include = "requirements_detector/"}
]
include = [
  "LICENSE",
  "README.md"
]

[tool.poetry.scripts]
requirements-detector = 'requirements_detector.run:run'

[tool.poetry.dependencies]
python = "^3.7"
astroid = "^2.0"

[tool.poetry.dev-dependencies]
tox = "^3.24.5"
pre-commit = "^2.17.0"
coverage = "^6.3.2"
coveralls = "^3.3.1"
twine = "^3.8.0"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-benchmark = "^3.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
