[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core>=1" ]

[tool.poetry]
name = "requirements-detector"
version = "1.4.0"
authors = [ "Landscape.io <code@landscape.io>" ]
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Environment :: Console',
  'Intended Audience :: Developers',
  'Operating System :: Unix',
  'Topic :: Software Development :: Quality Assurance',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'License :: OSI Approved :: MIT License',
]
license = "MIT"
keywords = [ "python", "requirements detector" ]
description = "Python tool to find and list requirements of a Python project"
readme = "README.md"
homepage = "https://github.com/landscapeio/requirements-detector"
packages = [
  { include = "requirements_detector/" },
]
include = [
  "c2cgeoform/py.typed",
]

[tool.poetry.scripts]
detect-requirements = 'requirements_detector.run:run'

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
astroid = "^3.0"
packaging = ">=21.3"
tomli = { version = "^2.2.1", python = "<3.11" }
semver = "^3.0.0"

[tool.poetry.dev-dependencies]
tox = "^3.24.5"
pre-commit = "^4.2.0"
pytest = "^6.2.4"
twine = "^6.1.0"
coverage = "^5.5"
pytest-benchmark = "^3.4.1"
pytest-cov = "^2.12.1"
types-toml = "^0.10.4"
